<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufjf.dcc196.ana.trabalho2.view.LivroActivity">

    <EditText
        android:id="@+id/txtTitulo"
        android:layout_width="350dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txtTitulo"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAutor"
        android:layout_width="346dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txtAutor"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnSalvar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditora"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/txtEditora"
        android:layout_width="180dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txtEditora"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/txtAno"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <EditText
        android:id="@+id/txtAno"
        android:layout_width="158dp"
        android:layout_height="47dp"
        android:layout_marginTop="63dp"
        android:ems="10"
        android:hint="@string/txtAno"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTitulo"
        app:layout_constraintLeft_toRightOf="@+id/txtEditora" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btnVoltar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="251dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnSalvar" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btnSalvar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="251dp"
        app:layout_constraintLeft_toRightOf="@+id/btnVoltar"
        app:layout_constraintRight_toLeftOf="@+id/btnListar" />

    <Button
        android:id="@+id/btnListar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple"
        android:text="@string/btnLista"
        android:textColor="@android:color/background_light"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnSalvar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="251dp" />

</android.support.constraint.ConstraintLayout>
